[tool.poetry]
name = "repl_python3_DBOJ-Problem-Adding-Web-App"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dnspython = "^2.1.0"
pymongo = "^3.12.0"
pywebio = "^1.3.3"
Flask = "^2.0.1"
grpcio = "^1.42.0"
grpcio-tools = "^1.42.0"
google-cloud-storage = "^1.43.0"
judge = "^0.2.0"
discord = "^1.7.3"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
